--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -34,7 +34,7 @@ payment:
       icon: "fa-university"
       details: |
         Bank Name: [To be announced]
-        Account Name: ICAANS 2026
+        Account Name: [To be announced]
         Account Number: [To be announced]
         IFSC Code: [To be announced]
         Reference: Please include your registration ID
