--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -181,7 +181,6 @@
     org: Symbiosis International (Deemed University), Pune, India
   - name: Dr. R.P. Ram Kumar
     org: Gokaraju Rangaraju Institute of Engineering and Technology, Bachupally, Hyderabad
-    post: Professor of AI and ML
   - name: Dr. A. Padma Priya
     org: Alagappa University, Karaikudi
   - name: Dr. Arun Biradar
@@ -271,3 +270,5 @@
     org: SRM Institute of Science and Technology (SRMIST), Kattankulathur, Chennai.
   - name: Dr. K. Kavitha
     org: Guru Nanak College, Velachery, Chennai.
+  - name: Dr. S. Ravivarman
+    org: Vardhaman College of Engineering, Telangana, India
