--- a/_data/submission.yml
+++ b/_data/submission.yml
@@ -1,5 +1,5 @@
 portal: Microsoft CMT
-url: "https://cmt3.research.microsoft.com/"
+url: "https://cmt3.research.microsoft.com/ICAANS2026"
 
 file_formats:
   - doc
